fixed overflow with footer

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,9 @@
     --ring: 215 20.2% 65.1%;
 
     --radius: 0.5rem;
+
+    --heading-height: 50px;
+    --root-padding: 8px;
   }
 
   .dark {
@@ -82,5 +85,6 @@
 
 html, body, #root {
   height: 100%;
+  box-sizing: border-box;
 }
 
